@@ -9,6 +9,7 @@ import org.bukkit.entity.Player;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CheckTabCompleter implements TabCompleter {
     @Override
@@ -26,7 +27,7 @@ public class CheckTabCompleter implements TabCompleter {
     }
 
     private static List<String> getOnlinePlayers() {
-        return Bukkit.getOnlinePlayers().stream().map(Player::getName).toList();
+        return Bukkit.getOnlinePlayers().stream().map(Player::getName).collect(Collectors.toList());
     }
 
 }
